--- a/.github/workflows/Update Wiki.yml
+++ b/.github/workflows/Update Wiki.yml
@@ -16,3 +16,4 @@ jobs:
         uses: OrlovM/Wiki-Action@master
         with:
           path: TAG.wiki
+          token: ${{ secrets.GITHUB_TOKEN }}
