--- a/.github/workflows/combine_wiki_entries.yml
+++ b/.github/workflows/combine_wiki_entries.yml
@@ -14,13 +14,13 @@ jobs:
     - name: Combine Files
       run: |
         # Define the output file
-        output_file="/tmp/combined_wiki.md"
+        output_file="tmp/combined_wiki.md"
         
         # Remove existing output file if it exists
         rm -f "$output_file"
         
         # Loop through each file in the directory
-        for file in /wiki/*; do
+        for file in wiki/*; do
           # Add divider before each file content
           echo "----- File: $file -----" >> "$output_file"
           # Append file content to the output file
