--- a/.github/workflows/combine_wiki_entries.yml
+++ b/.github/workflows/combine_wiki_entries.yml
@@ -22,7 +22,7 @@ jobs:
         # Loop through each file in the directory
         for file in wiki/*; do
           # Add divider before each file content
-          echo "----- File: $file -----" >> "$output_file"
+          echo "\n----- File: $file -----\n" >> "$output_file"
           # Append file content to the output file
           cat "$file" >> "$output_file"
           # Add extra newline for better separation
