--- a/.github/workflows/mover.yml
+++ b/.github/workflows/mover.yml
@@ -18,3 +18,11 @@ jobs:
       run: |
         shopt -s extglob
         mv !(wiki|archive) archive/
+        
+    - name: Commit changes
+      run: |
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+        git add .
+        git commit -m "Archive directories"
+        git push
