--- a/.github/workflows/bit.yml
+++ b/.github/workflows/bit.yml
@@ -1,4 +1,4 @@
-name: Seed File on BitTorrent
+name: Seed UltimateRevelation on BitTorrent
 
 on: 
   push:
@@ -14,24 +14,28 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Create tarball excluding archive/
-      run: tar --exclude='archive' -cvf BigGuyTAG.tar .
+    - name: Concatenate files into a single text file excluding archive/
+      run: find . -type f -not -path "./archive/*" -exec cat {} + > UltimateRevelation.txt
 
     - name: Build Docker image
       run: docker build -t bittorrent-seeder .
 
-    - name: Run Transmission to seed file
+    - name: Install Transmission and create torrent
       run: |
-        # Create a torrent file
         docker run --rm -v ${{ github.workspace }}:/downloads bittorrent-seeder bash -c "
           apt-get update && apt-get install -y transmission-cli &&
-          transmission-create -o /downloads/BigGuyTAG.torrent /downloads/BigGuyTAG.tar
+          transmission-create -o /downloads/UltimateRevelation.torrent /downloads/UltimateRevelation.txt
         "
 
-        # Start the transmission daemon
-        docker run -d --name seeder -v ${{ github.workspace }}:/downloads bittorrent-seeder
-
-        # Seed the file using the created torrent
+    - name: Start Transmission daemon and seed torrent
+      run: |
+        docker run -d --name seeder -v ${{ github.workspace }}:/downloads bittorrent-seeder transmission-daemon -f -t -w /downloads
+        
+        # Ensure the daemon is up
         sleep 10
-        docker exec seeder transmission-remote -a /downloads/BigGuyTAG.torrent
+        
+        # Add torrent to the transmission daemon
+        docker exec seeder transmission-remote -a /downloads/UltimateRevelation.torrent
+        
+        # Tail the logs to keep the container running and see the progress
         docker logs -f seeder
