--- a/.github/workflows/combine_wiki_entries.yml
+++ b/.github/workflows/combine_wiki_entries.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Combine Files
       run: |
         # Define the output file
-        output_file="tmp/single_report.md"
+        output_file="drafts/single_report.md"
         
         # Remove existing output file if it exists
         rm -f "$output_file"
@@ -37,7 +37,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add tmp/combined_wiki.md
+        git add drafts/single_report.md
         git commit -m "Combined wiki files into one"
         git push
         
