--- a/.github/workflows/combine_wiki_entries.yml
+++ b/.github/workflows/combine_wiki_entries.yml
@@ -19,11 +19,11 @@ jobs:
         # Remove existing output file if it exists
         rm -f "$output_file"
         
-        # Loop through each file in the directory
-        for file in reports/*; do
+        # Find and loop through each file in the reports directory and its subdirectories
+        find reports -type f | while read -r file; do
           # Add divider before each file content
           echo "*************************************" >> "$output_file"
-          echo "*** File: $file ***" >> "$output_file"
+          echo "*** File: $(basename "$file") ***" >> "$output_file"
           echo "*************************************" >> "$output_file"
           # Append file content to the output file
           cat "$file" >> "$output_file"
