--- a/.github/workflows/update_wiki_links.yml
+++ b/.github/workflows/update_wiki_links.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # Allows the workflow to be triggered manually
 
 jobs:
   update-wiki-links:
@@ -14,7 +13,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Ensure /wiki directory exists and copy .md files
+      - name: Delete existing /wiki directory if it exists
+        run: |
+          if [ -d "wiki" ]; then
+            rm -rf wiki
+          fi
+
+      - name: Copy .md files from /reports to /wiki
         run: |
           mkdir -p wiki
           cp -R reports/*.md wiki/
@@ -25,7 +30,11 @@ jobs:
             file_name=$(basename "$file" .md)
             search_text=$(echo "$file_name" | sed 's/-/ /g')
             link_text="[[${search_text}|]]"
-            sed -i "s/${search_text}/${link_text}/g" "$file"
+            # Process the file line by line, skipping lines that start with #
+            awk -v search="$search_text" -v replace="$link_text" '
+              !/^#/ { gsub(search, replace) }
+              { print }
+            ' "$file" > tmpfile && mv tmpfile "$file"
           done
 
       - name: Commit changes
@@ -35,16 +44,5 @@ jobs:
           git add wiki/
           git commit -m "Update wiki links in .md files"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Update Wiki Repository
-        run: |
-          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.wiki.git
-          cp -R wiki/* ${{ github.repository }}.wiki/
-          cd ${{ github.repository }}.wiki/
-          git add .
-          git commit -m "Force update wiki with new content"
-          git push --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
