--- a/.github/workflows/Database_README.yml
+++ b/.github/workflows/Database_README.yml
@@ -1,4 +1,4 @@
-name: Generate README for /database
+name: Generate database README
 
 on:
   push:
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: '16'
 
